fixed toggling replies bug. Now also hides comment editor on reply collaps

--- a/a1/public/css/comments.css
+++ b/a1/public/css/comments.css
@@ -93,8 +93,4 @@ form#new-topic-form {
     left: -80px;
 }
 
-div[id*=":"] {
-    display: none;
-}
-
 
